added layer torch r matrix

--- a/script.ipynb
+++ b/script.ipynb
@@ -110,7 +110,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Arthur\\AppData\\Local\\Temp\\ipykernel_6276\\1471860285.py:38: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "C:\\Users\\Arthur\\AppData\\Local\\Temp\\ipykernel_13284\\1471860285.py:38: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  result_np = torch.stack([previous_inclusion_score, torch.tensor(list_inc_score)])\n"
      ]
     },
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -618,139 +618,67 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Diff Barycenters"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([43747, 19, 3])\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Calculates the difference between each barycenters and their n='number_neigh_tri'-1 neighbors\n",
-    "barycenters_diff = np.subtract(barycenters[indices_neigh_tri[:, 0]][:, np.newaxis], barycenters[indices_neigh_tri[:, 1:]])   #Inverser la différence des barycentres si nécéssaire\n",
-    "\n",
-    "print(barycenters_diff.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### calculate e norm matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([43747, 3])\n"
-     ]
-    }
-   ],
-   "source": [
-    "v0, v1, v2 = triangles[:, 0], triangles[:, 1], triangles[:, 2]\n",
-    "\n",
-    "# Calculate edge vectors\n",
-    "e_ij = torch.norm(v0 - v1, dim=1)\n",
-    "e_ik = torch.norm(v0 - v2, dim=1)\n",
-    "e_jk = torch.norm(v1 - v2, dim=1)\n",
-    "\n",
-    "# Stack the edge vectors along the last dimension\n",
-    "diff_vectors = torch.stack([e_ij, e_ik, e_jk], dim=1)\n",
-    "\n",
-    "print(diff_vectors.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Calculate r"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(torch.Size([43747]), torch.Size([43747]))"
+       "torch.Size([43747, 19, 5])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "max_diff_vectors = diff_vectors.max(dim=1).values       # calculate t_n_max\n",
-    "min_diff_vectors = diff_vectors.min(dim=1).values       # calculate t_n_min\n",
-    "max_diff_vectors.shape, min_diff_vectors.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([43747, 19])\n",
-      "torch.Size([43747, 19])\n"
-     ]
-    }
-   ],
-   "source": [
-    "max_diff_vectors_diff = max_diff_vectors[indices_neigh_tri[:, 0]][:, None] - max_diff_vectors[indices_neigh_tri[:, 1:]]   #Inverser la différence des barycentres si nécéssaire   # calculate t_n_max - t_m_max\n",
-    "min_diff_vectors_diff = min_diff_vectors[indices_neigh_tri[:, 0]][:, None] - min_diff_vectors[indices_neigh_tri[:, 1:]]   #Inverser la différence des barycentres si nécéssaire   # calculate t_n_min - t_m_min\n",
-    "print(max_diff_vectors_diff.shape)\n",
-    "print(min_diff_vectors_diff.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([43747, 19, 5])\n"
-     ]
-    }
-   ],
-   "source": [
-    "r_matrix = torch.zeros((triangles.shape[0], number_neigh_tri-1, 5))\n",
+    "class RMatrix(nn.Module):\n",
+    "    def __init__(self, triangles, barycenters, indices_neigh_tri):\n",
+    "        super().__init__()\n",
+    "        self.triangles = triangles\n",
+    "        self.barycenters = barycenters\n",
+    "        self.indices_neigh_tri = indices_neigh_tri\n",
     "\n",
-    "r_matrix[:, :, 0]   = min_diff_vectors_diff\n",
-    "r_matrix[:, :, 1]   = max_diff_vectors_diff\n",
-    "r_matrix[:, :, 2:5] = barycenters_diff\n",
+    "    def forward(self):\n",
+    "        # DIFF BARYCENTERS\n",
+    "        barycenters_diff = np.subtract(self.barycenters[self.indices_neigh_tri[:, 0]][:, np.newaxis], self.barycenters[self.indices_neigh_tri[:, 1:]])   #Inverser la différence des barycentres si nécéssaire\n",
     "\n",
-    "print(r_matrix.shape)  # nb_triangles, len(indices_neigh_tri), 5dim/triangles\n",
     "\n",
-    "# Here r_matrix[i,j] represent the relation between the triangles (n = i) and (m = indices_neigh_tri_array[i,j])"
+    "        # TRIANGLE EDGES NORM\n",
+    "        v0, v1, v2 = self.triangles[:, 0], self.triangles[:, 1], self.triangles[:, 2]\n",
+    "\n",
+    "        # Calculate edge vectors\n",
+    "        e_ij = torch.norm(v0 - v1, dim=1)\n",
+    "        e_ik = torch.norm(v0 - v2, dim=1)\n",
+    "        e_jk = torch.norm(v1 - v2, dim=1)\n",
+    "\n",
+    "        # Stack the edge vectors along the last dimension\n",
+    "        diff_vectors = torch.stack([e_ij, e_ik, e_jk], dim=1)\n",
+    "\n",
+    "\n",
+    "        # MAX/MIN DIFF VECTORS\n",
+    "        max_diff_vectors = diff_vectors.max(dim=1).values       # calculate t_n_max\n",
+    "        min_diff_vectors = diff_vectors.min(dim=1).values       # calculate t_n_min\n",
+    "\n",
+    "        max_diff_vectors_diff = max_diff_vectors[self.indices_neigh_tri[:, 0]][:, None] - max_diff_vectors[self.indices_neigh_tri[:, 1:]]   #Inverser la différence des barycentres si nécéssaire   # calculate t_n_max - t_m_max\n",
+    "        min_diff_vectors_diff = min_diff_vectors[self.indices_neigh_tri[:, 0]][:, None] - min_diff_vectors[self.indices_neigh_tri[:, 1:]]   #Inverser la différence des barycentres si nécéssaire   # calculate t_n_min - t_m_min\n",
+    "\n",
+    "\n",
+    "        # R MATRIX COMPUTATION\n",
+    "        r_matrix = torch.zeros((self.triangles.shape[0], number_neigh_tri-1, 5))\n",
+    "\n",
+    "        r_matrix[:, :, 0]   = min_diff_vectors_diff\n",
+    "        r_matrix[:, :, 1]   = max_diff_vectors_diff\n",
+    "        r_matrix[:, :, 2:5] = barycenters_diff\n",
+    "        \n",
+    "        return r_matrix\n",
+    "\n",
+    "\n",
+    "r_matrix_layer = RMatrix(triangles, barycenters, indices_neigh_tri)\n",
+    "r_matrix = r_matrix_layer()\n",
+    "r_matrix.shape"
    ]
   },
   {
