error final mlp

--- a/script.ipynb
+++ b/script.ipynb
@@ -690,6 +690,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MLP(nn.Module):\n",
+    "  def __init__(self, r_matrix):\n",
+    "    super().__init__()\n",
+    "    self.r_matrix = r_matrix\n",
+    "    self.layers = nn.Sequential(\n",
+    "      nn.Flatten(),\n",
+    "      nn.Linear(32 * 32 * 3, 64),\n",
+    "      nn.ReLU(),\n",
+    "      nn.Linear(64, 32),\n",
+    "      nn.ReLU(),\n",
+    "      nn.Linear(32, 10)\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "  def forward(self, x):\n",
+    "    \n",
+    "    return self.layers(x)\n",
+    "\n",
+    "f_init = p_init\n",
+    "mlp = MLP(r_matrix)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
    "outputs": [
