added triangles indexes

--- a/script.ipynb
+++ b/script.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Arthur\\AppData\\Local\\Temp\\ipykernel_13284\\1471860285.py:38: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "C:\\Users\\ahdel\\AppData\\Local\\Temp\\ipykernel_4884\\1471860285.py:38: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  result_np = torch.stack([previous_inclusion_score, torch.tensor(list_inc_score)])\n"
      ]
     },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "torch.Size([1500, 3])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "torch.Size([1500, 64])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -500,6 +500,76 @@
     "triangles_ids_igraph = np.array(igraph_g.cliques(min=3, max=3))\n",
     "triangles = extended_graph_nodes[triangles_ids_igraph]\n",
     "print(triangles.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nonzero = extended_graph_adjacency_matrix.nonzero()\n",
+    "# print(nonzero.shape)\n",
+    "neighbors_one_indexes = nonzero.reshape(1500,15,2)[:,:,1].clone()\n",
+    "# print(\"neighbors_indexes : \", neighbors_one_indexes.shape, neighbors_one_indexes)\n",
+    "\n",
+    "neighbors_two_indexes = neighbors_one_indexes[neighbors_one_indexes]\n",
+    "# neighbors_two_indexes = neighbors_two_indexes[:,:,1:]                                                   # remove returns from the one neighbors\n",
+    "# print(\"neighbors_two_indexes : \", neighbors_two_indexes.shape, neighbors_two_indexes)\n",
+    "\n",
+    "neighbors_three_indexes = neighbors_one_indexes[neighbors_two_indexes]\n",
+    "# print(\"neighbors_three_indexes : \", neighbors_three_indexes.shape, neighbors_three_indexes)\n",
+    "\n",
+    "# Find the indices where the current index is present along the last dimension\n",
+    "values_index_reshape = torch.arange(neighbors_three_indexes.shape[0]).repeat((15,15,15,1)).T\n",
+    "# print(\"temp : \", values_index_reshape.shape)\n",
+    "indices = (neighbors_three_indexes == values_index_reshape).nonzero()\n",
+    "# print(indices.shape)\n",
+    "# print(indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i, j, k, l = indices[:,0], indices[:,1], indices[:,2], indices[:,3]\n",
+    "temp_j = neighbors_one_indexes[i,j]\n",
+    "temp_k = neighbors_two_indexes[i,j,k]\n",
+    "temp_l = neighbors_three_indexes[i,j,k,l]\n",
+    "triangles_indexes_test = torch.stack((i, temp_j, temp_k, temp_l), dim=1)\n",
+    "triangles_indexes_test = triangles_indexes_test[:,:3]               # remove virtual 4th point\n",
+    "print(triangles_indexes_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filter triangles indexes to clean the clones (=> divide the number of triangles by 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([196926, 3, 3])"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extended_graph_nodes[triangles_indexes_test].shape"
    ]
   },
   {
@@ -1338,7 +1408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
