added triangles torch

--- a/script.ipynb
+++ b/script.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ahdel\\AppData\\Local\\Temp\\ipykernel_4884\\1471860285.py:38: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "C:\\Users\\Arthur\\AppData\\Local\\Temp\\ipykernel_6540\\1471860285.py:38: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  result_np = torch.stack([previous_inclusion_score, torch.tensor(list_inc_score)])\n"
      ]
     },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "torch.Size([1500, 3])"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "torch.Size([1500, 64])"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -466,47 +466,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "IGRAPH U-W- 1500 12612 -- \n",
-      "+ attr: _nx_name (v), weight (e)\n"
-     ]
-    }
-   ],
-   "source": [
-    "igraph_g = igraphGraph(directed=False).from_networkx(nx.from_numpy_array(extended_graph_adjacency_matrix.numpy()))\n",
-    "print(igraph_g.summary())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 153,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([43747, 3, 3])\n"
-     ]
-    }
-   ],
-   "source": [
-    "triangles_ids_igraph = np.array(igraph_g.cliques(min=3, max=3))\n",
-    "triangles = extended_graph_nodes[triangles_ids_igraph]\n",
-    "print(triangles.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# igraph_g = igraphGraph(directed=False).from_networkx(nx.from_numpy_array(extended_graph_adjacency_matrix.numpy()))\n",
+    "# print(igraph_g.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# triangles_ids_igraph = np.array(igraph_g.cliques(min=3, max=3))\n",
+    "# triangles = extended_graph_nodes[triangles_ids_igraph]\n",
+    "# print(triangles.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Arthur\\AppData\\Local\\Temp\\ipykernel_6540\\263984140.py:14: UserWarning: The use of `x.T` on tensors of dimension other than 2 to reverse their shape is deprecated and it will throw an error in a future release. Consider `x.mT` to transpose batches of matrices or `x.permute(*torch.arange(x.ndim - 1, -1, -1))` to reverse the dimensions of a tensor. (Triggered internally at ..\\aten\\src\\ATen\\native\\TensorShape.cpp:3618.)\n",
+      "  values_index_reshape = torch.arange(neighbors_three_indexes.shape[0]).repeat((15,15,15,1)).T\n"
+     ]
+    }
+   ],
    "source": [
     "nonzero = extended_graph_adjacency_matrix.nonzero()\n",
     "# print(nonzero.shape)\n",
@@ -530,9 +522,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[   0,   52,  174],\n",
+      "        [   0,   52,  271],\n",
+      "        [   0,   52,  282],\n",
+      "        ...,\n",
+      "        [1499, 1477, 1413],\n",
+      "        [1499, 1477, 1459],\n",
+      "        [1499, 1477, 1461]])\n"
+     ]
+    }
+   ],
    "source": [
     "i, j, k, l = indices[:,0], indices[:,1], indices[:,2], indices[:,3]\n",
     "temp_j = neighbors_one_indexes[i,j]\n",
@@ -545,43 +551,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# filter triangles indexes to clean the clones (=> divide the number of triangles by 6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 181,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([196926, 3, 3])"
-      ]
-     },
-     "execution_count": 181,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "extended_graph_nodes[triangles_indexes_test].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([43747])\n"
+      "torch.Size([196926, 3])\n",
+      "tensor([[   0,   52,  174],\n",
+      "        [   0,   52,  271],\n",
+      "        [   0,   52,  282],\n",
+      "        ...,\n",
+      "        [1413, 1477, 1499],\n",
+      "        [1459, 1477, 1499],\n",
+      "        [1461, 1477, 1499]])\n",
+      "torch.Size([39061, 3])\n",
+      "tensor([[   0,   52,  174],\n",
+      "        [   0,   52,  271],\n",
+      "        [   0,   52,  282],\n",
+      "        ...,\n",
+      "        [1461, 1477, 1499],\n",
+      "        [1463, 1466, 1482],\n",
+      "        [1471, 1474, 1480]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# filter triangles indexes to clean the clones (=> divide the number of triangles by 6)\n",
+    "\n",
+    "sorted_tensor, _ = torch.sort(triangles_indexes_test, dim=-1)\n",
+    "print(sorted_tensor.shape)\n",
+    "print(sorted_tensor)\n",
+    "\n",
+    "# Use torch.unique to get unique rows\n",
+    "triangles_ids_igraph = torch.unique(sorted_tensor, dim=0)\n",
+    "print(triangles_ids_igraph.shape)\n",
+    "print(triangles_ids_igraph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "triangles = extended_graph_nodes[triangles_ids_igraph]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([39061, 3, 3]), torch.Size([39061, 3]))"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "triangles.shape, triangles_ids_igraph.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([39061])\n"
      ]
     }
    ],
@@ -592,7 +639,7 @@
     "\n",
     "    def forward(self, triangles_indexes):\n",
     "        # Extract indices for each triangle\n",
-    "        i, j, k = triangles_ids_igraph.T\n",
+    "        i, j, k = triangles_indexes.T\n",
     "\n",
     "        # Extract probabilities using advanced indexing\n",
     "        A_s_ij = A_s[i, j]\n",
@@ -618,14 +665,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([43747, 3])\n"
+      "torch.Size([39061, 3])\n"
      ]
     }
    ],
@@ -651,14 +698,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([43747, 20])\n"
+      "torch.Size([39061, 20])\n"
      ]
     }
    ],
@@ -689,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
