added display final mesh

--- a/script.ipynb
+++ b/script.ipynb
@@ -1133,25 +1133,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "(tensor(63.), tensor(-6.8354), tensor(84.4577))",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[73], line 12\u001b[0m\n\u001b[0;32m     10\u001b[0m     simplified_final_graph\u001b[38;5;241m.\u001b[39mnodes[current_node][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mindex_triangle\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[0;32m     11\u001b[0m simplified_final_graph\u001b[38;5;241m.\u001b[39mnodes[current_node][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mindex_triangle\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39madd(index_poly)\n\u001b[1;32m---> 12\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[43msimplified_final_graph\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnodes\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpoly\u001b[49m\u001b[43m[\u001b[49m\u001b[43mindex_other_node\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m)\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m     13\u001b[0m     simplified_final_graph\u001b[38;5;241m.\u001b[39mnodes[\u001b[38;5;28mtuple\u001b[39m(poly[index_other_node])][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mindex_triangle\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[0;32m     14\u001b[0m simplified_final_graph\u001b[38;5;241m.\u001b[39mnodes[\u001b[38;5;28mtuple\u001b[39m(poly[index_other_node])][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mindex_triangle\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39madd(index_poly)\n",
-      "File \u001b[1;32mc:\\Users\\Arthur\\miniconda3\\envs\\meshPFE\\lib\\site-packages\\networkx\\classes\\reportviews.py:194\u001b[0m, in \u001b[0;36mNodeView.__getitem__\u001b[1;34m(self, n)\u001b[0m\n\u001b[0;32m    189\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(n, \u001b[38;5;28mslice\u001b[39m):\n\u001b[0;32m    190\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m nx\u001b[38;5;241m.\u001b[39mNetworkXError(\n\u001b[0;32m    191\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m does not support slicing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    192\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtry list(G.nodes)[\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn\u001b[38;5;241m.\u001b[39mstart\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn\u001b[38;5;241m.\u001b[39mstop\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn\u001b[38;5;241m.\u001b[39mstep\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    193\u001b[0m     )\n\u001b[1;32m--> 194\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_nodes\u001b[49m\u001b[43m[\u001b[49m\u001b[43mn\u001b[49m\u001b[43m]\u001b[49m\n",
-      "\u001b[1;31mKeyError\u001b[0m: (tensor(63.), tensor(-6.8354), tensor(84.4577))"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of nodes: 531\n",
+      "Number of edges: 1022\n"
      ]
     }
    ],
    "source": [
+    "selected_triangles_np = selected_triangles.numpy()\n",
+    "\n",
     "simplified_final_graph = nx.Graph()\n",
-    "for index_poly, poly in enumerate(selected_triangles):\n",
+    "for index_poly, poly in enumerate(selected_triangles_np):\n",
     "    for index_current_node in range(len(poly)):\n",
     "        current_node = tuple(poly[index_current_node])\n",
     "        for index_other_node in range(index_current_node+1, len(poly)):\n",
