added custom torch dataset class

--- a/script.ipynb
+++ b/script.ipynb
@@ -20,6 +20,8 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "from igraph import Graph as igraphGraph\n",
+    "import os\n",
+    "from torch.utils.data import Dataset\n",
     "# from scipy.spatial.distance import cdist\n",
     "# from shapely.geometry import LineString, MultiLineString, Polygon, MultiPolygon, LinearRing"
    ]
@@ -976,6 +978,47 @@
     "\n",
     "graph_nodes = torch.Tensor(np.array(graph))\n",
     "graph_adjacency_matrix = torch.Tensor(nx.adjacency_matrix(graph).toarray())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<Mesh: b'STLB ATF 12.9.0.99 COLOR=\\xb3\\xb3\\xb3\\xff' 3532 vertices>,\n",
+       " <networkx.classes.graph.Graph at 0x19209cad330>)"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class MeshDataset(Dataset):\n",
+    "    def __init__(self, mesh_dir):\n",
+    "        self.mesh_dir = mesh_dir\n",
+    "        self.len = 0\n",
+    "        self.filepaths = list()\n",
+    "        for filename in os.listdir(mesh_dir):\n",
+    "            f = os.path.join(mesh_dir, filename)\n",
+    "            if os.path.isfile(f):\n",
+    "                self.len += 1\n",
+    "                self.filepaths.append(f)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return self.len\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        mesh_path = self.filepaths[idx]\n",
+    "        mesh_data = transformation.stl_to_mesh(mesh_path)\n",
+    "        graph = transformation.mesh_to_graph(mesh_data)\n",
+    "        return mesh_data, graph\n",
+    "\n",
+    "torch_dataset = MeshDataset(\"3d_models/stl/\")"
    ]
   },
   {
